Add graphics for boss descriptions

--- a/sections/title_page.tex
+++ b/sections/title_page.tex
@@ -23,4 +23,6 @@
     \svg[0.1]{gold}
     \svg[0.1]{building_materials}
     \svg[0.1]{valuables}
+    \svg[0.1]{attack_yellow}
+    \svg[0.1]{defense_yellow}
 }
