--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -40,22 +40,64 @@
   \end{itemize}
 \end{minipage}
 
-\begin{multicols}{4}
+% \begin{multicols}{4}
+%   \centering
+%   \raisebox{-.25\height}{\svg[20]{bronze}} \textbf{Easy}\\
+%   \vspace{2em}
+%   No additional changes
+%
+%   \columnbreak
+%
+%   \raisebox{-.25\height}{\svg[20]{silver}} \textbf{Normal}
+%
+%   \columnbreak
+%
+%   \raisebox{-.25\height}{\svg[20]{golden}} \textbf{Hard}
+%
+%   \columnbreak
+%
+%   \raisebox{-.25\height}{\svg[20]{azure}} \textbf{Impossible}
+% \end{multicols}
+
+\bigskip
+
+\hommtable[]{8}{
   \centering
-  \raisebox{-.25\height}{\svg[20]{bronze}} \textbf{Easy}\\
-  \vspace{2em}
-  No additional changes
+  \bigskip
 
-  \columnbreak
+  \newcommand{\bronze}[0]{\svg[12]{bronze}}
+  \newcommand{\silver}[0]{\svg[12]{silver}}
+  \newcommand{\golden}[0]{\svg[12]{golden}}
+  \newcommand{\azure}[0]{\svg[12]{azure}}
 
-  \raisebox{-.25\height}{\svg[20]{silver}} \textbf{Normal}
-
-  \columnbreak
-
-  \raisebox{-.25\height}{\svg[20]{golden}} \textbf{Hard}
-
-  \columnbreak
-
-  \raisebox{-.25\height}{\svg[20]{azure}} \textbf{Impossible}
-\end{multicols}
-
+  \begin{tabularx}{\linewidth}{XXXX}
+  \darkcell{\raisebox{-.25\height}{\svg[20]{bronze}} \textbf{Easy}} &
+  \darkcell{\raisebox{-.25\height}{\svg[20]{silver}} \textbf{Normal}} &
+  \darkcell{\raisebox{-.25\height}{\svg[20]{golden}} \textbf{Hard}} &
+  \darkcell{\raisebox{-.25\height}{\svg[20]{azure}} \textbf{Impossible}}\\
+  \lightcell[1.8]{No additional\\changes} &
+  \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
+  \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 30} &
+  \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +2 \svg{attack_yellow} \\ +2 \svg{defense_yellow}}
+  % \darkcell[1.4]{Easy}
+  %   & \lightcell[1.4]{\bronze \silver \silver \silver \golden}
+  %   & \lightcell[1.4]{\silver \silver \silver \golden \golden}
+  %   & \lightcell[1.4]{\silver \silver \golden \azure \footref{azure} \linebreak
+  %     (2\bronze, 4\silver, 3\golden, 1\azure)}\\
+  % \darkcell[1.4]{Normal}
+  %   & \lightcell[1.4]{\silver \silver \silver \golden \golden}
+  %   & \lightcell[1.4]{\silver \silver \silver \golden \azure}
+  %   & \lightcell[1.4]{\golden \golden \golden \azure \footref{azure} \linebreak
+  %     (2\silver, 7\golden, 1\azure)}\\
+  % \darkcell[1.4]{Hard}
+  %   & \lightcell[1.4]{\silver \silver \golden \golden \golden}
+  %   & \lightcell[1.4]{\silver \silver \golden \golden \azure}
+  %   & \lightcell[1.4]{\golden \golden \azure \azure \footref{azure} \linebreak
+  %     (2\silver, 6\golden, 2\azure)}\\
+  % \darkcell[1.4]{Impossible}
+  %   & \lightcell[1.4]{\silver \golden \golden \golden \golden}
+  %   & \lightcell[1.4]{\golden \golden \golden \golden \azure}
+  %   & \lightcell[1.4]{\golden \azure \azure \azure \footref{azure} \linebreak
+  %     (7\golden, 3\azure)}\\
+  \end{tabularx}
+}
