--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -13,57 +13,38 @@
 \begin{minipage}{0.7\textwidth}
   \textbf{\MakeUppercase{Boss: Crystal Dragon}}
 
-  \textit{Made entirely from red crystal and brought to lief through magical means, the Crystal Dragon is literally semitransparent, lit from the center by its magical heart.
-    Used frequently as a training tool for you dragon slayers, many wizards also create these creatures for the crystal they shed.
+  \textit{Composed entirely of red crystal and brought to life through magical means, the Crystal Dragon is semi-transparent, illuminated from within by its magical heart.
+    Often used as a training tool for aspiring dragon slayers, many wizards also create these creatures to harvest the crystals they shed.
   }
 
   \textbf{Fighting the Crystal Dragon:}
   \begin{enumerate}
     \item Place the Crystal Dragon miniature/card on the battlefield. Ignore its ability.
-    \item Place two Gold Golems and two Diamond Golens on the battlefield.
+    \item Place two Gold Golems and two Diamond Golems on the battlefield.
   \end{enumerate}
 
   \textbf{Rules:}
   \begin{itemize}
-    \item At the start of every battle round, check if any of the Golems was removed in the previous round.
-      If so, spawn one new Diamond or Gold Golem (picked randomly) in the last row of the battlefield.
+    \item At the start of every battle round, check if any of the Golems were removed in the previous round.
+      If so, spawn one new Diamond or Gold Golem (chosen randomly) in the last row of the battlefield.
     \item \textit{Golem Devour:} The Crystal Dragon can consume Golems to regain health.
-      During its turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consme it, gainin a certain amount of health based on teh type of Golem consumed:
+      During its turn, if the Crystal Dragon is adjacent to a Golem, it can choose to consume it, gaining a certain amount of health based on the type of Golem consumed:
       \begin{itemize}
         \item Consuming a Gold Golem: Regains 2 HP.
-        \item Consuming a Diamong Golem: Regains 4 HP.
-        \item[] \textbf{Note:} Crystal Dragon can only consume one Golem per turn.
+        \item Consuming a Diamond Golem: Regains 4 HP.
+        \item[] \textbf{Note:} The Crystal Dragon can only consume one Golem per turn.
       \end{itemize}
-    \item Golem Abilities: Gold and Diamong Golems do not possess any additional abilites beyond those specified on their cards.
+    \item Golem Abilities: Gold and Diamond Golems do not possess any additional abilities beyond those specified on their cards.
       They primarily serve as fodder for the Crystal Dragon's health regeneration.
     \item The Crystal Dragon \textit{counterattacks twice} per battle round.
   \end{itemize}
 \end{minipage}
 
-% \begin{multicols}{4}
-%   \centering
-%   \raisebox{-.25\height}{\svg[20]{bronze}} \textbf{Easy}\\
-%   \vspace{2em}
-%   No additional changes
-%
-%   \columnbreak
-%
-%   \raisebox{-.25\height}{\svg[20]{silver}} \textbf{Normal}
-%
-%   \columnbreak
-%
-%   \raisebox{-.25\height}{\svg[20]{golden}} \textbf{Hard}
-%
-%   \columnbreak
-%
-%   \raisebox{-.25\height}{\svg[20]{azure}} \textbf{Impossible}
-% \end{multicols}
-
 \bigskip
 
 \hommtable[]{8}{
   \centering
-  \bigskip
+  \medskip
 
   \newcommand{\bronze}[0]{\svg[12]{bronze}}
   \newcommand{\silver}[0]{\svg[12]{silver}}
@@ -79,25 +60,5 @@
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 22} &
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 30} &
   \lightcell[1.8]{\raisebox{-.25\height}{\includegraphics[height=15px]{\images/hp.png}} 40 \\ +2 \svg{attack_yellow} \\ +2 \svg{defense_yellow}}
-  % \darkcell[1.4]{Easy}
-  %   & \lightcell[1.4]{\bronze \silver \silver \silver \golden}
-  %   & \lightcell[1.4]{\silver \silver \silver \golden \golden}
-  %   & \lightcell[1.4]{\silver \silver \golden \azure \footref{azure} \linebreak
-  %     (2\bronze, 4\silver, 3\golden, 1\azure)}\\
-  % \darkcell[1.4]{Normal}
-  %   & \lightcell[1.4]{\silver \silver \silver \golden \golden}
-  %   & \lightcell[1.4]{\silver \silver \silver \golden \azure}
-  %   & \lightcell[1.4]{\golden \golden \golden \azure \footref{azure} \linebreak
-  %     (2\silver, 7\golden, 1\azure)}\\
-  % \darkcell[1.4]{Hard}
-  %   & \lightcell[1.4]{\silver \silver \golden \golden \golden}
-  %   & \lightcell[1.4]{\silver \silver \golden \golden \azure}
-  %   & \lightcell[1.4]{\golden \golden \azure \azure \footref{azure} \linebreak
-  %     (2\silver, 6\golden, 2\azure)}\\
-  % \darkcell[1.4]{Impossible}
-  %   & \lightcell[1.4]{\silver \golden \golden \golden \golden}
-  %   & \lightcell[1.4]{\golden \golden \golden \golden \azure}
-  %   & \lightcell[1.4]{\golden \azure \azure \azure \footref{azure} \linebreak
-  %     (7\golden, 3\azure)}\\
   \end{tabularx}
 }
