--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -34,17 +34,17 @@
 
   \textbf{Rules:}
   \begin{itemize}
-    \item \textit{Hoarding Tendency:} At the start of every turn, randomly choose a card from the shuffled pile of discarded artifacts.
+    \item \textit{Hoarding Tendency:} At the start of each turn, randomly choose a card from the shuffled pile of discarded artifacts.
       If the artifact is:
       \begin{itemize}[leftmargin=15pt]
-        \item A weapon, the Dragon gains one Breath attack that targets three creature in a row.
-          The unit in the middle directily hit suffers full damage, while units on both sides suffer 3 \svg{damage-red} less.
-        \item A piece of armor/shield/clothing, the Dragon gains emporary 3 armor, represented with spare Faction cubes.
+        \item A weapon: The Dragon gains one Breath attack that targets three creatures in a row.
+          The unit directly hit in the middle suffers full damage, while the units on both sides suffer 3 \svg{damage-red} less.
+        \item A piece of armor, shield, or clothing: The Dragon gains 3 temporary armor, represented with spare Faction cubes.
           Remove them after they have absorbed damage.
-        \item A trinket, the Azure dragon roars and summons an ice storn, causing all creatures to freeze in fear.
-          This results in eveery unit moving only 1 battle tile per round, while the Azure Dragon can fly to any tile on the combat board.
+        \item A trinket: The Azure Dragon roars and summons an ice storm, causing all creatures to freeze in fear.
+          This results in every unit moving only 1 battle tile per round, while the Azure Dragon can fly to any tile on the combat board.
       \end{itemize}
-    \item Azure Dragon is immune to all spells cast against it.
+    \item The Azure Dragon is immune to all spells cast against it.
     \item Buffs and enhancements cast on player's units remain effective.
   \end{itemize}
 \end{minipage}
@@ -165,14 +165,14 @@
 
   \textbf{Rules:}
   \begin{itemize}
-    \item Rust Dragon is immune to basic spells.
-    \item \textit{Corrosive Vomit:} Rust Dragon has a powerful crow control ability that allows it to spew four pools of sulfuric acid onto the bttle field \textit{at the beginning} of each combat round.
+    \item The Rust Dragon is immune to basic spells.
+    \item \textit{Corrosive Vomit:} The Rust Dragon has a powerful crowd control ability that allows it to spew four pools of sulfuric acid onto the battlefield \textit{at the beginning} of each combat round.
       Use M\&M deck cards placed face down to mark their locations.
-    \item The Rust Dragon cannot place pools at the same tile as in the previous round.
+    \item The Rust Dragon cannot place pools on the same tiles as in the previous round.
       Mark the tiles with spare Faction cubes to indicate where the pools were located.
     \item The pools of sulfuric acid block battlefield tiles and impede movement for one round only.
       They serve as obstacles for both players and the Dragon.
-    \item The Rust Dragon's passive ability, \textit{Corrosion}, allows it to decrease an enemy unit's armor by 2 with each attack.
+    \item The Rust Dragon's passive ability, \textit{Corrosion}, decreases an enemy unit's armor by 2 with each attack.
       Place a spare Faction cube on the unit's card to indicate this effect.
       Corrosion stacks up to -4 \svg{defense}.
   \end{itemize}
@@ -232,21 +232,21 @@
 
   \textbf{Rules:}
   \begin{itemize}
-    \item Faerie Dragon is immune to basic spells.
-    \item Faerie Dragon can cast up to two different spells per battle round.
-    \item All spells ar edisplayed visibly next to the combat board:
+    \item The Faerie Dragon is immune to basic spells.
+    \item The Faerie Dragon can cast up to two different spells per battle round.
+    \item All spells are displayed visibly next to the combat board:
       \begin{enumerate}[leftmargin=15pt]
         \item The first spell is \textit{Lightning}.
         \item The second spell is \textit{Cure}.
-        \item For the thir spell, Faerie Dragon randomly picks an expert spell from the Spell deck, excluding Map spells.
+        \item For the third spell, the Faerie Dragon randomly picks an expert spell from the Spell deck, excluding Map spells.
           If a Map spell is picked, draw another spell.
       \end{enumerate}
     \item \textit{Trickster:} In the first round of the battle, the first targeted Faerie Dragon is a mere mirage.
       It inflicts damage, but disappears from the battlefield when hit by an enemy.
     \item Dendroids' Ability: Each Dendroid holds a key to the Faerie Dragon's power.
-      After the second Dendroid dies, start removing one spell from the Faerie DRagon's spellbook, beginning from the third spell back.
-      Decrease the dragon's spell empowerment by one (starting from its maximum) upn vanquishing the 2nd, 3rd and 4th Dendroids.
-      When there are no Dendroids left, the dragon loses the abilit yto cast spells.
+      After the second Dendroid dies, start removing one spell from the Faerie Dragon's spellbook, beginning with the third spell.
+      Decrease the dragon's spell empowerment by one (starting from its maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.
+      When there are no Dendroids left, the dragon loses the ability to cast spells.
   \end{itemize}
 \end{minipage}
 
