Update boss formatting

--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -5,12 +5,12 @@
 
 \textbf{Author:} Mateusz ``MATMOT'' Motyka
 
-\pagebreak
+\clearpage
 
-\begin{minipage}{0.3\textwidth}
-  \framedimage[0.95\linewidth]{\art/azure_dragon.jpg}
-\end{minipage}
-\begin{minipage}{0.7\textwidth}
+\begin{wrapfigure}{l}{0.3\textwidth}
+  \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/azure_dragon.jpg}}
+\end{wrapfigure}
+{
   \textbf{\MakeUppercase{Boss: Azure Dragon}}
 
   \medskip
@@ -47,7 +47,7 @@
     \item The Azure Dragon is immune to all spells cast against it.
     \item Buffs and enhancements cast on player's units remain effective.
   \end{itemize}
-\end{minipage}
+}
 
 \bigskip
 
@@ -72,12 +72,12 @@
   \end{tabularx}
 }
 
-\pagebreak
+\clearpage
 
-\begin{minipage}{0.3\textwidth}
-  \framedimage[0.95\linewidth]{\art/crystal_dragon.jpg}
-\end{minipage}
-\begin{minipage}{0.7\textwidth}
+\begin{wrapfigure}{l}{0.3\textwidth}
+  \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/crystal_dragon.jpg}}
+\end{wrapfigure}
+{
   \textbf{\MakeUppercase{Boss: Crystal Dragon}}
 
   \medskip
@@ -112,11 +112,11 @@
       They primarily serve as fodder for the Crystal Dragon's health regeneration.
     \item The Crystal Dragon \textit{counterattacks twice} per battle round.
   \end{itemize}
-\end{minipage}
+}
 
 \bigskip
 
-\hommtable[]{12}{
+\hommtable[]{10}{
   \centering
   \medskip
 
@@ -137,12 +137,12 @@
   \end{tabularx}
 }
 
-\pagebreak
+\vspace{-2em}
 
-\begin{minipage}{0.3\textwidth}
-  \framedimage[0.95\linewidth]{\art/rust_dragon.jpg}
-\end{minipage}
-\begin{minipage}{0.7\textwidth}
+\begin{wrapfigure}{l}{0.3\textwidth}
+  \raisebox{0pt}[\dimexpr\height-1.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/rust_dragon.jpg}}
+\end{wrapfigure}
+{
   \textbf{\MakeUppercase{Boss: Rust Dragon {\scriptsize Requires Fortress Expansion}}}
 
   \medskip
@@ -176,11 +176,11 @@
       Place a spare Faction cube on the unit's card to indicate this effect.
       Corrosion stacks up to -4 \svg{defense}.
   \end{itemize}
-\end{minipage}
+}
 
-\bigskip
+\vspace{5em}
 
-\hommtable[]{11}{
+\hommtable[]{9}{
   \centering
   \medskip
 
@@ -201,12 +201,12 @@
   \end{tabularx}
 }
 
-\pagebreak
+\vspace{-2em}
 
-\begin{minipage}{0.32\textwidth}
-  \framedimage[0.95\linewidth]{\art/faerie_dragon.jpg}
-\end{minipage}
-\begin{minipage}{0.68\textwidth}
+\begin{wrapfigure}{l}{0.28\textwidth}
+  \raisebox{0pt}[\dimexpr\height-0.2\baselineskip\relax]{\framedimage[1.1\linewidth]{\art/faerie_dragon.jpg}}
+\end{wrapfigure}
+{
   \textbf{\MakeUppercase{Boss: Faerie Dragon {\scriptsize Requires Rampart Expansion}}}
 
   \medskip
@@ -248,11 +248,9 @@
       Decrease the dragon's spell empowerment by one (starting from its maximum) upon vanquishing the 2nd, 3rd, and 4th Dendroids.
       When there are no Dendroids left, the dragon loses the ability to cast spells.
   \end{itemize}
-\end{minipage}
+}
 
-\bigskip
-
-\hommtable[]{10}{
+\hommtable[]{8}{
   \centering
   \medskip
 
