--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -1,9 +1,105 @@
 % !TeX spellcheck = en_US
 \addscenariosection{1}{Clash Scenario}{The Hunt}{\images/slayer.png}
 
-% \begin{multicols*}{2}
+\begin{multicols*}{2}
 
 \textbf{Author:} Mateusz ``MATMOT'' Motyka
+
+\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1229888426975821926}{Archon Studios Discord}
+
+\textit{The land quivers under the reign of the fearsome Dragon.
+  The one who dares to slay this monstrous beast shall ascend to the throne, crowned as the rightful ruler of the shattered kingdom.
+}
+
+\subsection*{\MakeUppercase{Scenario Length}}
+This scenario is played over 14 rounds.
+
+\subsection*{\MakeUppercase{Player Setup}}
+\textbf{Player Count:} 2 or 3
+
+\textbf{Starting Resources:}\par
+\resources{15}{4}{2}
+
+\textbf{Starting Income:}\par
+\resources{10}{2}{1}
+
+\textbf{Starting Units:}
+\begin{itemize}
+  \item A Pack of \svg{bronze} units with the \textit{lowest} Recruitment cost
+  \item A Few \svg{bronze} units with the \textit{highest} Recruitment cost
+\end{itemize}
+
+\textbf{Town Buildings:} \svg{bronze} Dwelling, City Hall
+
+\textbf{Map tile Pool:} Each player takes 1 random Far (II-III) Map tile
+
+\textbf{Additional Bonus:} None
+
+\subsection*{\MakeUppercase{Map Setup}}
+Take the following Map tiles and arrange them as shown in the scenario map layout:
+
+\textbf{For a 2-player scenario:}
+\begin{itemize}
+  \item 2 × Starting (I) Map tile
+  \item 2 × Far (II-III) Map tile
+  \item 2 × Near (IV-V) Map tile
+  \item 1 × Center (VI-VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+\end{itemize}
+
+\textbf{For a 3-player scenario:}
+\begin{itemize}
+  \item 3 × Starting (I) Map tile
+  \item 3 × Far (II-III) Map tile
+  \item 3 × Near (IV-V) Map tile
+  \item 1 × Center (VI-VII) Map tile; place a Black cube or a miniature representing the Dragon in the center of the tile
+\end{itemize}
+
+\subsection*{\MakeUppercase{Victory Conditions}}
+Slay the Dragon Boss with your Main Hero.
+
+\subsection*{\MakeUppercase{Defeat Conditions}}
+If the Dragon Boss still lives at the end of the 14th round, all players lose the scenario.
+
+\subsection*{\MakeUppercase{Timed Events}}
+
+\textbf{4$^{th}$, 8$^{th}$ and 12$^{th}$ Rounds:}
+\begin{itemize}
+  \item Remove all Black cubes from all the Water Wheels, Windmills and Markets of Time on the map.
+\end{itemize}
+
+\subsection*{\MakeUppercase{Additional Rules}}
+
+Before the start of this scenario:
+
+\begin{itemize}
+  \item Select one of the DRagons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.
+    You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} - Azure, \textit{Defense} - Crystal, \textit{Knowledge} - Rust, \textit{Power} - Faerie.
+\end{itemize}
+
+During this scenario:
+
+\begin{itemize}
+  \item Only a Main Hero can kill the Dragon.
+  \item The final battle with the Dragon occurs at the center field of the Center Map tile.
+    Please refer to the encouter rules specified in the ruls of the selected Dragon Boss.
+  \item While fighting a Dragon Boss, ignore Gorgon's special ability.
+  \item Heroes are unable to retreat from battles with the Dragon Boss.
+  \item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 Experience Point.
+  \item Players can visit each Obelisk only once.
+    Aferwards, they must place their Faction cube on the field.
+  \item In the boss encounter, there is no battle round limit.
+\end{itemize}
+
+\begin{tikzpicture}[overlay]
+  \centering
+  \node at (14, 8) {\includegraphics[scale=0.45]{\_assets/maps/the-hunt-2.png}};
+  \node at (14, 2) {\footnotesize{\textbf{\MakeUppercase{2-PLAYER SCENARIO}}}};
+  \node at (10, -5) {\includegraphics[scale=0.45]{\_assets/maps/the-hunt-3.png}};
+  \node at (9, -11.5) {\footnotesize{\textbf{\MakeUppercase{3-PLAYER SCENARIO}}}};
+\end{tikzpicture}
+
+
+\end{multicols*}
 
 \clearpage
 
