--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -81,7 +81,7 @@ During this scenario:
 \begin{itemize}
   \item Only a Main Hero can kill the Dragon.
   \item The final battle with the Dragon occurs at the center field of the Center Map tile.
-    Please refer to the encouter rules specified in the ruls of the selected Dragon Boss.
+    Please refer to the encounter rules specified in the rules of the selected Dragon Boss.
   \item While fighting a Dragon Boss, ignore Gorgon's special ability.
   \item Heroes are unable to retreat from battles with the Dragon Boss.
   \item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 Experience Point.
