--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -72,7 +72,7 @@ If the Dragon Boss still lives at the end of the 14th round, all players lose th
 Before the start of this scenario:
 
 \begin{itemize}
-  \item Select one of the DRagons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.
+  \item Select one of the Dragons from the boss list: Azure Dragon, Crystal Dragon, Rust Dragon, or Faerie Dragon.
     You can choose randomly by picking one of the four shuffled Statistic cards: \textit{Attack} - Azure, \textit{Defense} - Crystal, \textit{Knowledge} - Rust, \textit{Power} - Faerie.
 \end{itemize}
 
@@ -86,7 +86,7 @@ During this scenario:
   \item Heroes are unable to retreat from battles with the Dragon Boss.
   \item When each player visits an Obelisk, they can choose to roll a Treasure die or receive 1 Experience Point.
   \item Players can visit each Obelisk only once.
-    Aferwards, they must place their Faction cube on the field.
+    Afterwards, they must place their Faction cube on the field.
   \item In the boss encounter, there is no battle round limit.
 \end{itemize}
 
