--- a/clash/the_hunt.tex
+++ b/clash/the_hunt.tex
@@ -36,7 +36,10 @@ This scenario is played over 14 rounds.
 \textbf{Additional Bonus:} None
 
 \subsection*{\MakeUppercase{Map Setup}}
-Take the following Map tiles and arrange them as shown in the scenario map layout:
+
+Take the following Map tiles and arrange them as shown in the scenario map layout.
+
+\columnbreak
 
 \textbf{For a 2-player scenario:}
 \begin{itemize}
