Introduce new art and layout fixes

--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -101,6 +101,14 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
   \end{itemize}
 \end{itemize}
 
+\vspace*{\fill}
+
+\begin{center}
+  \includegraphics[width=\linewidth]{\art/dimension_door.png}
+\end{center}
+
+\vspace*{\fill}
+
 \end{multicols*}
 
 \newpage
@@ -173,6 +181,14 @@ There are undefeated units left in the Titans' Stronghold at the end of Round 16
     3\bronze 8\silver 10\golden 6\azure}\\
   \end{tabularx}
 }
+
+\vspace*{\fill}
+
+\begin{center}
+  \includegraphics[width=0.8\linewidth]{\art/magic_arrow.png}
+\end{center}
+
+\vspace*{\fill}
 
 \newpage
 
