--- a/metadata.tex
+++ b/metadata.tex
@@ -442,7 +442,7 @@
 \vspace*{\fill}
 \columnbreak
 \vspace{-3em}
-\includegraphics[width=\linewidth]{\art/mummy.jpg}
+\includegraphics[width=\linewidth]{\art/elf.jpg}
 \end{multicols*}
 
 \clearpage
