Setup tarnslations of the document

--- a/clash/main.tex
+++ b/clash/main.tex
@@ -2,8 +2,8 @@
 
 \clearpage
 
-\input{clash/bloody_grail.tex}
+\input{\clash/bloody_grail.tex}
 
 \clearpage
 
-\input{clash/the_hunt.tex}
+\input{\clash/the_hunt.tex}
