--- a/coops/main.tex
+++ b/coops/main.tex
@@ -2,12 +2,12 @@
 
 \clearpage
 
-\input{coops/sentinels.tex}
+\input{\coops/sentinels.tex}
 
 \clearpage
 
-\input{coops/titans_stronghold.tex}
+\input{\coops/titans_stronghold.tex}
 
 \clearpage
 
-\input{coops/emerald_island.tex}
+\input{\coops/emerald_island.tex}
