--- a/main_pl.tex
+++ b/main_pl.tex
@@ -1,14 +1,13 @@
-% !TeX spellcheck = en_US
 \documentclass[12pt]{article}
 
-% Language setting
+% Languages
 \usepackage[T1]{fontenc}
-\usepackage[english]{babel}
+\usepackage[polish]{babel}
 
-\def\sections{sections}
-\def\coops{coops}
-\def\clash{clash}
-\def\campaigns{campaigns}
+\def\sections{sections/translated/pl}
+\def\coops{coops/translated/pl}
+\def\clash{clash/translated/pl}
+\def\campaigns{campaigns/translated/pl}
 \def\lang_header_adjustment{0px}
 
 \newcommand{\versionlabel}{Version}
