--- a/metadata.tex
+++ b/metadata.tex
@@ -457,8 +457,8 @@
 
 \include{campaigns/main.tex}
 
-\include{sections/credits.tex}
+\include{\sections/credits.tex}
 
-\include{sections/back_cover.tex}
+\include{\sections/back_cover.tex}
 
 \end{document}
