--- a/main_en.tex
+++ b/main_en.tex
@@ -6,9 +6,12 @@
 \usepackage[english]{babel}
 
 \def\sections{sections}
-\def\coops{coops}
-\def\clash{clash}
-\def\campaigns{campaigns}
+\def\coopspath{coops}
+\def\coopstitle{Cooperative Scenarios}
+\def\clashpath{clash}
+\def\clashtitle{Clash Scenarios}
+\def\campaignspath{campaigns}
+\def\campaignstitle{Campaigns}
 \def\lang_header_adjustment{0px}
 
 \newcommand{\versionlabel}{Version}
