--- a/main_pl.tex
+++ b/main_pl.tex
@@ -5,9 +5,12 @@
 \usepackage[polish]{babel}
 
 \def\sections{sections/translated/pl}
-\def\coops{coops/translated/pl}
-\def\clash{clash/translated/pl}
-\def\campaigns{campaigns/translated/pl}
+\def\coopspath{coops/translated/pl}
+\def\coopstitle{Kooperacje}
+\def\clashpath{clash/translated/pl}
+\def\clashtitle{Starcia}
+\def\campaignspath{campaigns/translated/pl}
+\def\campaignstitle{Kampanie}
 \def\lang_header_adjustment{0px}
 
 \newcommand{\versionlabel}{Version}
