Add initial setup for Polish

--- a/main_pl.tex
+++ b/main_pl.tex
@@ -6,24 +6,24 @@
 
 \def\sections{sections/translated/pl}
 \def\coopspath{coops/translated/pl}
-\def\coopstitle{Kooperacje}
+\def\coopstitle{Tryb Kooperacji}
 \def\clashpath{clash/translated/pl}
-\def\clashtitle{Starcia}
+\def\clashtitle{Tryb Starcia}
 \def\campaignspath{campaigns/translated/pl}
 \def\campaignstitle{Kampanie}
 \def\lang_header_adjustment{0px}
 
-\newcommand{\versionlabel}{Version}
-\newcommand{\versionwarning}{This is an unreleased version built on GitHub from commit}
+\newcommand{\versionlabel}{Wersja}
+\newcommand{\versionwarning}{To jest nieopublikowana wersja zbudowana na GitHubie z commita}
 
 \newcommand{\intro}{
-  This is a community-driven project, which has a \href{\repourl}{GitHub repository}.
-  Everyone is welcome to contribute scenarios, make changes, and fix errors.
+  Niniejszy projekt jest tworzony przez społeczność oraz ma swoje \href{\repourl}{repozytorium na GitHubie}.
+  Dodawanie nowych scenariuszy, wprowadzanie zmian oraz poprawki są mile widziane.
 }
 \newcommand{\pageshorthand}{p.}
 
-\newcommand{\qrgithub}{Scan to open \textbf{GitHub} repository.}
+\newcommand{\qrgithub}{Skanuj, aby otworzyć repozytorium na \textbf{GitHubie}.}
 
-\title{\includegraphics[width=6cm]{\images/title.png}\\Fan-Made Mission Book}
+\title{\includegraphics[width=6cm]{\images/title.png}\\Fanowska Księga Misji}
 
 \input{metadata.tex}
