--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -454,6 +454,21 @@ msgid ""
 "{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to corrosion "
 "armor decrease} \\\\ \\end{tabularx} }"
 msgstr ""
+"\\hommtable[]{9}{ \\centering \\medskip \\newcommand{\\bronze}[0]{\\svg[12]"
+"{bronze}} \\newcommand{\\silver}[0]{\\svg[12]{silver}} \\newcommand{\\golden}"
+"[0]{\\svg[12]{golden}} \\newcommand{\\azure}[0]{\\svg[12]{azure}} "
+"\\begin{tabularx}{\\linewidth}{XXXX} \\darkcell{\\raisebox{-.25\\height}"
+"{\\svg[20]{bronze}} \\textbf{Easy}} & \\darkcell{\\raisebox{-.25\\height}"
+"{\\svg[20]{silver}} \\textbf{Normal}} & \\darkcell{\\raisebox{-.25\\height}"
+"{\\svg[20]{golden}} \\textbf{Hard}} & \\darkcell{\\raisebox{-.25\\height}"
+"{\\svg[20]{azure}} \\textbf{Impossible}}\\\\ \\lightcell[2.5]{No additional\\"
+"\\changes} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 20} & \\lightcell[2.5]"
+"{\\raisebox{-.25\\height}{\\includegraphics[height=15px]{\\images/hp.png}} "
+"32} & \\lightcell[2.5]{\\raisebox{-.25\\height}"
+"{\\includegraphics[height=15px]{\\images/hp.png}} 40 \\\\ +1 to corrosion "
+"armor decrease} \\\\ \\end{tabularx} }\n"
+"\\clearpage"
 
 #. type: wrapfigure
 #: clash/the_hunt.tex:350
