Setup tarnslations of the document (#33)

--- a/clash/main.tex
+++ b/clash/main.tex
@@ -1,9 +1,9 @@
-\addscenariogroup{Clash Scenarios}{\layout/clash.png}
+\addscenariogroup{\clashtitle}{\layout/clash.png}
 
 \clearpage
 
-\input{clash/bloody_grail.tex}
+\input{\clashpath/bloody_grail.tex}
 
 \clearpage
 
-\input{clash/the_hunt.tex}
+\input{\clashpath/the_hunt.tex}
