--- a/coops/main.tex
+++ b/coops/main.tex
@@ -1,13 +1,13 @@
-\addscenariogroup{Cooperative Scenarios}{\layout/coops.png}
+\addscenariogroup{\coopstitle}{\layout/coops.png}
 
 \clearpage
 
-\input{coops/sentinels.tex}
+\input{\coopspath/sentinels.tex}
 
 \clearpage
 
-\input{coops/titans_stronghold.tex}
+\input{\coopspath/titans_stronghold.tex}
 
 \clearpage
 
-\input{coops/emerald_island.tex}
+\input{\coopspath/emerald_island.tex}
