--- a/metadata.tex
+++ b/metadata.tex
@@ -390,8 +390,6 @@
   }{\put (0in,-\paperheight){\includegraphics[width=\paperwidth,height=0.05\paperheight]{\layout/bottom.png}}}
 }
 
-\makeindex[columns=3, title=,]
-
 \begin{document}
 
 \include{\sections/title_page.tex}
@@ -457,7 +455,7 @@
 
 \include{campaigns/main.tex}
 
-\include{sections/credits.tex}
+\include{\sections/credits.tex}
 
 \include{sections/back_cover.tex}
 
