--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -34,7 +34,7 @@ This scenario is played over 12 rounds.
 
 \textbf{Town Buildings:} \svg{bronze} Dwelling, Citadel
 
-\textbf{Map tile Pool:} Each player takes 1 random Near (IV-V) Map tile and 1 random Far (II-III) Map tile.
+\textbf{Map tile Pool:} Each player takes 1 random Near (IV-V) Map tile and 1 random Far (II-III) Map tile. These tiles should not contain any Obelisks.
 
 \textbf{Additional Bonus:} Search (2) the Artifact Deck
 
@@ -95,19 +95,24 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
   \item Players can trade resources when one of the active player's heroes visits a trading post or stands on a field adjacent to an allied hero.
   \item The hero who defeats an enemy army gains 2 \svg{experience}.
     The victorious player rolls two Treasure Dice and resolves one of them.
+  \item Additionally, no player can:
+  \begin{itemize}
+      \item Attack other Heroes.
+      \item Capture a Mine or Settlement that is already Flagged.
+  \end{itemize}
 \end{itemize}
 
 \subsection*{\MakeUppercase{Enemy Spawning\\and Movement}}
 
 \begin{itemize}
   \item Enemy armies spawn on a random Obelisk field (use hero miniatures from factions not in play).
-  \item Determine which Obelisk field by rolling 2 Attack Dice:
+  \item Determine which Obelisk field by rolling 2 Attack Dice. Apply the results as following (D1/D2), reroll every 0:
   \begin{itemize}[leftmargin=15pt]
-    \item First die: --1 west, +1 east, 0 reroll
-    \item Second die: --1 north, +1 south, 0 reroll
+    \item +1/+1 = North, +1/-1 = East
+    \item -1/+1 = West, -1/-1 = South
   \end{itemize}
-  \item For a more balanced distribution, in Rounds 7 and 9, the enemy spawns on the opposite side from the previous round.
-    Rounds 8 and 10 are entirely random.
+  \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1 take the opposite result from what was rolled in the previous Round.
+  Rounds 8 and 10 are entirely random.
   \item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.
   \item If there is a hero on the field where the enemy spawns, a fight starts immediately.
   \item Enemy armies move at the end of every turn, starting with the turn they spawned.
@@ -120,6 +125,7 @@ One of your towns is captured, or a main hero is defeated in a battle (retreat d
 \subsection*{\MakeUppercase{Combat with\\Enemy Armies}}
 
 \begin{itemize}
+  \item Fighting enemy armies over more than one Combat Round does not cost Movement Points.
   \item During a battle with an enemy army, a hero can retreat whenever a friendly unit is about to activate.
     A retreating main Hero loses all remaining MPs and is returned to an allied town or settlement of their choice, keeping all remaining units.
   \item Retreating secondary heroes are removed from the game, but their remaining units are kept.
